--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-PROJECT_NAME=your_project_name
-MY_USERNAME=your_username
+PROJECT_NAME=hw07
+MY_USERNAME=Sawasdichai.amor
+HTTP_PORT=8080
+PMA_PORT=8081
+DB_NAME=registration_db
